Fix nav menu clicking on iOS devices
Thanks for the bug report, Yarko!

--- a/pycon/static/css/slight.css
+++ b/pycon/static/css/slight.css
@@ -512,6 +512,10 @@ nav > .nav {
     color: #fff;
     text-decoration: none;
 }
+.dropdown-toggle {
+    /* Allow click event on iOS devices */
+    cursor: pointer;
+}
 .dropdown-menu {
     display: none;
     position: absolute;
